@@ -98,10 +98,11 @@ Programs_minidom_CFLAGS = \
 	$(GLOBALDEPS_CFLAGS)
 
 Programs_minidom_LDADD = \
-	 libjavascriptcoregtk-@WEBKITGTK_API_MAJOR_VERSION@.@WEBKITGTK_API_MINOR_VERSION@.la \
-	 $(WINMM_LIBS) \
-	 -lm \
-	 -lstdc++
+	libjavascriptcoregtk-@WEBKITGTK_API_MAJOR_VERSION@.@WEBKITGTK_API_MINOR_VERSION@.la \
+	$(WINMM_LIBS) \
+	-lm \
+	-lpthread \
+	-lstdc++
 
 Programs_minidom_LDFLAGS = \
 	-no-install \
@@ -125,6 +126,7 @@ Programs_jsc_@WEBKITGTK_API_MAJOR_VERSION@_CXXFLAGS = \
 	$(UNICODE_CFLAGS)
 
 Programs_jsc_@WEBKITGTK_API_MAJOR_VERSION@_LDADD = \
+	-lpthread \
 	libjavascriptcoregtk-@WEBKITGTK_API_MAJOR_VERSION@.@WEBKITGTK_API_MINOR_VERSION@.la \
 	$(WINMM_LIBS)
 
